samples/_failures_safe/1761730139_0a659f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d385d477.c: In function ‘main’:
./samples/SAFE/__tmp_d385d477.c:159:11: error: expected ‘;’ at end of input
  159 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_d385d477.c:159:5: error: expected declaration or statement at end of input
  159 |     printf
      |     ^~~~~~
